hphp/hack/test/sound_dynamic/typing/intersection_dynamic.bad.php.exp
ERROR: File "intersection_dynamic.bad.php", line 12, characters 10-19:
Invalid return type (Typing[4110])
  File "intersection_dynamic.bad.php", line 10, characters 17-29:
  Expected `((string & dynamic) | E)`
  File "intersection_dynamic.bad.php", line 6, characters 22-23:
  But got `dynamic`
ERROR: File "intersection_dynamic.bad.php", line 12, characters 10-19:
Invalid return type (Typing[4110])
  File "intersection_dynamic.bad.php", line 10, characters 19-19:
  Expected `E`
  File "intersection_dynamic.bad.php", line 6, characters 22-23:
  But got `dynamic`
ERROR: File "intersection_dynamic.bad.php", line 12, characters 10-19:
Invalid return type (Typing[4110])
  File "intersection_dynamic.bad.php", line 10, characters 23-28:
  Expected `string`
  File "intersection_dynamic.bad.php", line 6, characters 22-23:
  But got `dynamic`
